chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    # kompose.cmd: kompose convert
    # kompose.version: 1.26.1 (HEAD)
    # traefik.enable: "true"
    # traefik.http.routers.random-chat-grpc.entrypoints: web
    # traefik.http.routers.random-chat-grpc.rule: Headers(`content-type`,`application/grpc`) && Headers(`service-id`, `chat`)
    # traefik.http.routers.random-chat-grpc.service: random-chat-grpc
    # traefik.http.routers.random-chat.entrypoints: web
    # traefik.http.routers.random-chat.rule: PathPrefix(`/api`)
    # traefik.http.routers.random-chat.service: random-chat
    # traefik.http.services.random-chat-grpc.loadbalancer.server.port: "4000"
    # # traefik.http.services.random-chat-grpc.loadbalancer.server.scheme: h2c
    # traefik.http.services.random-chat.loadbalancer.server.port: "80"
  creationTimestamp: null
  labels:
    io.kompose.service: random-chat
  name: random-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: random-chat
  strategy: {}
  template:
    metadata:
      annotations:
      #   kompose.cmd: kompose convert
      #   kompose.version: 1.26.1 (HEAD)
      #   traefik.enable: "true"
      #   traefik.http.routers.random-chat-grpc.entrypoints: web
      #   traefik.http.routers.random-chat-grpc.rule: Headers(`content-type`,`application/grpc`) && Headers(`service-id`, `chat`)
      #   traefik.http.routers.random-chat-grpc.service: random-chat-grpc
      #   traefik.http.routers.random-chat.entrypoints: web
      #   traefik.http.routers.random-chat.rule: PathPrefix(`/api`)
      #   traefik.http.routers.random-chat.service: random-chat
      #   traefik.http.services.random-chat-grpc.loadbalancer.server.port: "4000"
      #   # traefik.http.services.random-chat-grpc.loadbalancer.server.scheme: h2c
      #   traefik.http.services.random-chat.loadbalancer.server.port: "80"
      # creationTimestamp: null
      labels:
        io.kompose.service: random-chat
    spec:
      containers:
        - args:
            - chat
          image: minghsu0107/random-chat-api:main
          name: random-chat
          ports:
            - containerPort: 80
            - containerPort: 4000
          resources:
            requests:
              memory: "$MEMORY"
              cpu: "$CPU"
            limits:
              memory: "$MEMORY"
              cpu: "$CPU"

      restartPolicy: Always
status: {}
