jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  #   kompose.cmd: kompose convert
  #   kompose.version: 1.26.1 (HEAD)
  # creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger
  strategy: {}
  template:
    metadata:
      annotations:
      #   kompose.cmd: kompose convert
      #   kompose.version: 1.26.1 (HEAD)
      # creationTimestamp: null
      labels:
        io.kompose.service: jaeger
    spec:
      containers:
        - image: jaegertracing/all-in-one:1.22
          name: jaeger
          ports:
            - containerPort: 14268
            - containerPort: 16686
          resources: {}
      restartPolicy: Always
status: {}
