match.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
    # kompose.cmd: kompose convert
    # kompose.version: 1.26.1 (HEAD)
    # traefik.enable: "true"
    # traefik.http.routers.match.entrypoints: web
    # traefik.http.routers.match.rule: PathPrefix(`/api/match`)
    # traefik.http.routers.match.service: match
    # traefik.http.services.match.loadbalancer.server.port: "80"
  creationTimestamp: null
  labels:
    io.kompose.service: match
  name: match
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: match
  strategy: {}
  template:
    metadata:
      annotations:
        # kompose.cmd: kompose convert
        # kompose.version: 1.26.1 (HEAD)
        # traefik.enable: "true"
        # traefik.http.routers.match.entrypoints: web
        # traefik.http.routers.match.rule: PathPrefix(`/api/match`)
        # traefik.http.routers.match.service: match
        # traefik.http.services.match.loadbalancer.server.port: "80"
      creationTimestamp: null
      labels:
        io.kompose.service: match
    spec:
      containers:
        - args:
            - match
          image: minghsu0107/random-chat-api:main
          name: match
          ports:
            - name: websocket
              containerPort: 80
          resources:
            requests:
              memory: "$MEMORY"
              cpu: "$CPU"
            limits:
              memory: "$MEMORY"
              cpu: "$CPU"

      restartPolicy: Always
status: {}
