uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.uploader.entrypoints: web
    traefik.http.routers.uploader.rule: PathPrefix(`/api/file`)
    traefik.http.routers.uploader.service: uploader
    traefik.http.services.uploader.loadbalancer.server.port: "80"
  creationTimestamp: null
  labels:
    io.kompose.service: uploader
  name: uploader
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uploader
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
        traefik.enable: "true"
        traefik.http.routers.uploader.entrypoints: web
        traefik.http.routers.uploader.rule: PathPrefix(`/api/file`)
        traefik.http.routers.uploader.service: uploader
        traefik.http.services.uploader.loadbalancer.server.port: "80"
      creationTimestamp: null
      labels:
        io.kompose.service: uploader
    spec:
      containers:
        - args:
            - uploader
          image: minghsu0107/random-chat-api:main
          name: uploader
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
