jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  type: NodePort
  ports:
    - name: "14268"
      port: 14268
      targetPort: 14268
      nodePort: 31630
    - name: "16686"
      port: 16686
      targetPort: 16686
      nodePort: 31631
  selector:
    io.kompose.service: jaeger
status:
  loadBalancer: {}
