redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-service
    namespace: redis-latest
    labels:
      app: redis
spec:
  ports:
    - port: 6379
  clusterIP: None
  selector:
    app: redis
