ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/websocket-services: "match"
    # nginx.org/websocket-services: "match"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location /api/match {
    #       proxy_pass http://ws;
    #       proxy_http_version 1.1;
    #       proxy_set_header Upgrade $http_upgrade;
    #       proxy_set_header Connection "Upgrade";
    #       proxy_set_header Host $host;
    #     }
  creationTimestamp: null
  name: go-random-chat
  namespace: default
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix

      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 80

      - path: /api/match
        pathType: Prefix
        backend:
          service:
            name: match
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: random-chat
            port:
              number: 80

      - path: /api/file
        pathType: Prefix
        backend:
          service:
            name: uploader
            port:
              number: 80
status:
  loadBalancer: {}
